<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/last_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/never_played"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_questions"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/google_launched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_google_launched"
        android:textSize="22dp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_launched"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n1_google_launched"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2_google_launched"
            android:layout_marginRight="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/simpsons_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_house_number_of_simpsons"
        android:textAlignment="center"
        android:textSize="22dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2_house_number_of_simpsons"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n1_house_number_of_simpsons"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_number_of_simpsons"
            android:layout_marginRight="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/known_quarryman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_known_as_quarryman"
        android:textAlignment="center"
        android:textSize="22dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/known_as_quarryman"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n1_known_as_quarryman"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2_known_as_quarryman"
            android:layout_marginRight="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/metallica_drummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_metallica_drummer"
        android:textAlignment="center"
        android:textSize="22dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n1_metallica_drummer"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metallica_drummer"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2_metallica_drummer"
            android:layout_marginRight="10dp"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_check"/>
</LinearLayout>